[project]
name = "enterprise-ai-gateway"
version = "0.1.0"
description = "Enterprise AI Gateway - 統一 API、地端/雲端多模型路由、成本治理、安全檢查與管理 Dashboard"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[tool.setuptools]
packages = ["gateway"]
